# openfs

./: .gitignore  CMakeLists.txt  README.md  build_debug.bat  build_output.txt  run_tests.bat
build2/: CMakeCache.txt
cmake/: dependencies.cmake
configs/: data_node.conf  meta_node.conf  openfs-data.service  openfs-meta.service
docs/: architecture.md  benchmark.md  deployment.md  development-plan.md  requirements.md
proto/: common.proto  data_service.proto  meta_service.proto  node_service.proto
scripts/: deploy_ubuntu.sh  package.sh  run_benchmark.sh  uninstall.sh
src/cli/: openfs_cli.cpp
src/client/: block_splitter.cpp  block_splitter.h  data_connection.cpp  data_connection.h  meta_connection.cpp  meta_connection.h  metadata_cache.cpp  metadata_cache.h  openfs_client.cpp  openfs_client.h
src/common/: config.cpp  config.h  crc32.cpp  crc32.h  id_generator.cpp  id_generator.h  logging.cpp  logging.h  types.cpp  types.h
src/data/: block_bitmap.cpp  block_bitmap.h  block_io_engine.cpp  block_io_engine.h  block_scheduler.cpp  data_node.cpp  data_node.h  data_service_impl.cpp  data_service_impl.h  disk_manager.cpp  disk_manager.h  disk_pool.cpp  disk_pool.h  l2_cache.cpp  l2_cache.h  main.cpp  segment_engine.cpp  segment_engine.h  segment_reader.cpp  segment_reader.h  segment_sealer.cpp  segment_sealer.h  segment_writer.cpp  segment_writer.h  wal_manager.cpp  wal_manager.h
src/fuse/: openfs_fuse.cpp  openfs_fuse.h
src/meta/: block_allocator.cpp  block_allocator.h  block_map.cpp  block_map.h  heat_tracker.cpp  heat_tracker.h  inode_table.cpp  inode_table.h  main.cpp  meta_node.cpp  meta_node.h  meta_node_client.cpp  meta_node_client.h  meta_server.cpp  meta_server.h  meta_service_impl.cpp  meta_service_impl.h  namespace_manager.cpp  namespace_manager.h  node_manager.cpp  node_manager.h  rebalance_manager.cpp  rebalance_manager.h  repair_manager.cpp  repair_manager.h
src/s3/: s3_server.cpp  s3_server.h
tests/: CMakeLists.txt  test_block_bitmap.cpp  test_common_config.cpp  test_common_crc32.cpp  test_common_id_generator.cpp  test_common_types.cpp  test_data_segment_io.cpp  test_data_service.cpp  test_disk_manager.cpp  test_e2e_pipeline.cpp  test_meta_block_allocator.cpp  test_meta_block_map.cpp  test_meta_inode_table.cpp  test_meta_namespace_manager.cpp  test_meta_node_manager.cpp  test_meta_service.cpp  test_node_service.cpp  test_util.cpp  test_util.h  test_wal_manager.cpp
